--- a/8.dts
+++ b/8.dts
@@ -111,7 +111,7 @@
 		compatible = "simple-bus";
 		ranges;
 
-		serial0@50900000 {
+		serial@0x50900000 {
 			compatible = "snps,dw-apb-uart";
 			reg = <0x00 0x50900000 0x00 0x10000>;
 			clock-frequency = <0xbebc200>;
