--- a/dtss/13.dts
+++ b/dtss/13.dts
@@ -11,34 +11,19 @@
 	};
 	
 	chosen {
-		xen,xen-bootargs = "com1=poll sched=null";
+		xen,xen-bootargs = "com1=115200,8n1 sched=null";
 		
 		stdout-path = "serial0";
 		
-		DOM1 {
-			module@0x90400000 {
-				compatible = "multiboot,module", "multiboot,ramdisk";
-				reg = <0x00 0x90400000 0x00 0x659000>;
-			};
-			
-			module@0x808ef000 {
-				bootargs = "rw root=/dev/ram console=hvc0 earlycon=sbi earlyprintk keep_bootcon bootmem_debug debug";
-				compatible = "multiboot,module", "multiboot,kernel";
-				reg = <0x00 0x808ef000 0x00 0x68ff6d>;
-			};
+		module@0x90400000 {
+			compatible = "multiboot,module", "multiboot,ramdisk";
+			reg = <0x00 0x90400000 0x00 0x659000>;
 		};
 		
-		DOM2 {
-			module@0xa0000000 {
-				compatible = "multiboot,module", "multiboot,ramdisk";
-				reg = <0x00 0x90400000 0x00 0x659000>;
-			};
-			
-			module@0xb0000000 {
-				bootargs = "rw root=/dev/ram console=hvc0 earlycon=sbi earlyprintk keep_bootcon bootmem_debug debug";
-				compatible = "multiboot,module", "multiboot,kernel";
-				reg = <0x00 0x808ef000 0x00 0x68ff6d>;
-			};
+		module@0x808ef000 {
+			bootargs = "rw root=/dev/ram console=ttyS0,115200 earlycon=sbi earlyprintk keep_bootcon bootmem_debug debug";
+			compatible = "multiboot,module", "multiboot,kernel";
+			reg = <0x00 0x808ef000 0x00 0x68ff6d>;
 		};
 	};
 
