--- a/dtss/21.dts
+++ b/dtss/21.dts
@@ -25,13 +25,13 @@
 			
 			module@0x90400000 {
 				compatible = "multiboot,module", "multiboot,ramdisk";
-				reg = <0x00 0x90400000 0x00 0x659000>;
+				reg = <0x90400000 0x659000>;
 			};
 			
 			module@0x808ef000 {
 				bootargs = "rw root=/dev/ram console=hvc0 earlycon=sbi earlyprintk keep_bootcon bootmem_debug debug";
 				compatible = "multiboot,module", "multiboot,kernel";
-				reg = <0x00 0x808ef000 0x00 0x68ff6d>;
+				reg = <0x808ef000 0x68ff6d>;
 			};
 		};
 		
@@ -45,13 +45,13 @@
 
 			module@0xa0000000 {
 				compatible = "multiboot,module", "multiboot,ramdisk";
-				reg = <0x00 0xa0000000 0x00 0x659000>;
+				reg = <0xa0000000 0x659000>;
 			};
 			
 			module@0xb0000000 {
 				bootargs = "rw root=/dev/ram console=hvc0 earlycon=sbi earlyprintk keep_bootcon bootmem_debug debug";
 				compatible = "multiboot,module", "multiboot,kernel";
-				reg = <0x00 0xb0000000 0x00 0x68ff6d>;
+				reg = <0xb0000000 0x68ff6d>;
 			};
 		};
 	};
